--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/joy": "^5.0.0-beta.52",
-    "@mui/material": "^6.4.8",
+    "@mui/material": "^6.4.9",
+    "mssql": "^11.0.1",
+    "mysql2": "^3.14.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
