--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.8",
     "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^6.4.9",
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "jsonwebtoken": "^9.0.2",
@@ -23,9 +24,11 @@
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "next": "15.2.3",
+    "primereact": "^10.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "sweetalert2": "^11.17.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
