--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
