--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.487.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.487.0",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "next": "15.2.3",
+    "next-cloudinary": "^6.16.0",
     "primereact": "^10.9.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0" ,
+    "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "sweetalert2": "^11.17.2",
     "zod": "^3.24.2",
